# store_parser

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PRD.md  image_catalog.html  image_groups.html  product_image_groups.html
scripts/: deduplicate_images.py  generate_summary.py  process_image_urls.py  upload_to_google_sheets.py
src/: __init__.py  checklist.py  checklist_manager.py  crawler.py  downloader.py  main.py  models.py  parser.py
tests/: test_models.py  test_parser.py
